Last glitch for now lol.

--- a/Advocacy_angular/app/PrichardFeed.html
+++ b/Advocacy_angular/app/PrichardFeed.html
@@ -19,7 +19,7 @@
 <header class="navbar navbar-default navbar-fixed-top navbar-inner">
   <a class="btn btn-primary" href="../index.html#/view1">Educate</a>
   <a class="btn btn-primary" href="PrichardFeed.html">Advocate</a>
-  <a class="btn btn-primary" href="../index.html#/view3">Legislate</a>
+  <a class="btn btn-primary" href="../sunlight.html">Legislate</a>
 </header>
 
 <style>
